--- a/public/formulario.html
+++ b/public/formulario.html
@@ -17,10 +17,10 @@
         <nav class="main-menu">
             <h1>Bem Vindo(a)!</h1>
             <ul>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <b></b>
                     <b></b>
-                    <a href="#">
+                    <a href="./dashboard.html">
                         <i class="fa fa-house nav-icon"></i>
                         <span class="nav-text">Dashboard</span>
                     </a>
@@ -29,16 +29,16 @@
                 <li class="nav-item">
                     <b></b>
                     <b></b>
-                    <a href="#">
+                    <a href="./quiz.html">
                         <i class="fa fa-user nav-icon"></i>
-                        <span class="nav-text">Ranking</span>
+                        <span class="nav-text">Quiz</span>
                     </a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item active">
                     <b></b>
                     <b></b>
-                    <a href="#">
+                    <a href="./formulario.html">
                         <i class="fa fa-calendar-check nav-icon"></i>
                         <span class="nav-text">Formulário</span>
                     </a>
@@ -46,7 +46,7 @@
                 <li class="nav-item">
                     <b></b>
                     <b></b>
-                    <a href="#">
+                    <a href="./index.html">
                         <i class="fa fa-sliders nav-icon"></i>
                         <span class="nav-text">Sair</span>
                     </a>
