--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="header">
         <nav class="navbar">
-            <img class="logoBandaNav" src="../public/assets/imgs/ORaioRappa.png" style="width: 95px;">
+            <img class="logoBandaNav" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
             <a href="./index.html">INICIAL</a>
             <a href="#chamaSobre">SOBRE</a>
             <a href="#Discografia">DISCOGRAFIA</a>
@@ -34,7 +34,7 @@
     <div class="espacamento"></div>
 
     <div class="divFotoBanda">
-        <img class="logoBanda" src="../public/assets/imgs/ORaioRappa.png" alt="">
+        <img class="logoBanda" src="./assets/imgs/ORaioRappa.png" alt="">
     </div>
 
     <div class="conjunto2">
@@ -54,35 +54,35 @@
             <div class="sobreFoto-container">
                 <!-- Full-width images with number and caption text -->
                 <div class="Integrantes fade">
-                    <img src="../public/assets/banda/MarceloFalcao.jpg" style="width:100%">
+                    <img src="./assets/banda/MarceloFalcao.jpg" style="width:100%">
                     <div class="NameSobre">Marcelo Falcão </div>
                     <p>(vocalista)</p>
                 </div>
 
                 <div class="Integrantes fade">
-                    <img src="../public/assets/banda/Xandão.jpg" style="width:100%">
+                    <img src="./assets/banda/Xandão.jpg" style="width:100%">
                     <div class="NameSobre">Xandão</div>
                     <p>(guitarrista)</p>
                 </div>
 
                 <div class="Integrantes fade">
-                    <img src="../public/assets/banda/Marcelo Yuka.jpg" style="width:100%">
+                    <img src="./assets/banda/Marcelo Yuka.jpg" style="width:100%">
                     <div class="NameSobre">Marcelo Yuka</div>
                     <p>(baterista e letrista)</p>
                 </div>
 
                 <div class="Integrantes fade">
-                    <img src="../public/assets/banda/Marcelo Lobato.jpg" style="width:100%">
+                    <img src="./assets/banda/Marcelo Lobato.jpg" style="width:100%">
                     <div class="NameSobre">Marcelo Lobato</div>
                     <p>(tecladista, percussionista <br>e baterista)</p>
                 </div>
                 <div class="Integrantes fade">
-                    <img src="../public/assets/banda/Lauro Farias.png" style="width:100%">
+                    <img src="./assets/banda/Lauro Farias.png" style="width:100%">
                     <div class="NameSobre">Lauro Farias</div>
                     <p>(baixista)</p>
                 </div>
                 <div class="Integrantes fade">
-                    <img src="../public/assets/banda/Nelson Meirelles.jpg" style="width:100%">
+                    <img src="./assets/banda/Nelson Meirelles.jpg" style="width:100%">
                     <div class="NameSobre">Nelson Meirelles</div>
                     <p>(baixista)</p>
                 </div>
@@ -104,18 +104,18 @@
             <h1>Principais Álbuns</h1>
         </div>
         <div class="items">
-            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/1ORappa.jpg)"></div>
-            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/2RappaMundi.jpg)">
+            <div class="item" tabindex="0" style="background-image: url(./assets/albuns/1ORappa.jpg)"></div>
+            <div class="item" tabindex="0" style="background-image: url(./assets/albuns/2RappaMundi.jpg)">
             </div>
-            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/3LadoBLadoA.jpg)">
+            <div class="item" tabindex="0" style="background-image: url(./assets/albuns/3LadoBLadoA.jpg)">
             </div>
             <div class="item" tabindex="0"
-                style="background-image: url(../public/assets/albuns/4OSilêncioQPrecedeOEsporro.jpg)"></div>
-            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/5SeteVezes.jpg)">
+                style="background-image: url(./assets/albuns/4OSilêncioQPrecedeOEsporro.jpg)"></div>
+            <div class="item" tabindex="0" style="background-image: url(./assets/albuns/5SeteVezes.jpg)">
             </div>
-            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/6NuncaTemFim.jpg)">
+            <div class="item" tabindex="0" style="background-image: url(./assets/albuns/6NuncaTemFim.jpg)">
             </div>
-            <div class="item" tabindex="0" style="background-image: url(../public/assets/albuns/7Acustico.jpg)">
+            <div class="item" tabindex="0" style="background-image: url(./assets/albuns/7Acustico.jpg)">
             </div>
         </div>
     </div>
