--- a/public/login.html
+++ b/public/login.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="header">
                 <nav class="navbar">
-                    <img class="logoBandaNav" src="../public/assets/imgs/ORaioRappa.png" style="width: 95px;">
+                    <img class="logoBandaNav" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
                     <a href="./index.html">INICIAL</a>
                     <a href="./simulador.html">SOBRE</a>
                     <a href="./simulador.html">DISCOGRAFIA</a>
@@ -137,7 +137,7 @@
                     sessionStorage.ID_USUARIO = json.id;
 
                     setTimeout(function () {
-                        window.location = "./formulario.html";
+                        window.location = "./dashboard.html";
                     }, 1000); // apenas para exibir o loading
 
                 });
