--- a/public/sobre.html
+++ b/public/sobre.html
@@ -20,7 +20,7 @@
     <!--header inicio-->
     <div class="header">
         <nav class="navbar">
-            <img class="logoBandaNav" src="../public/assets/imgs/ORaioRappa.png" style="width: 95px;">
+            <img class="logoBandaNav" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
             <a href="./index.html">INICIAL</a>
             <a href="#chamaSobre">SOBRE</a>
             <a href="#Discografia">DISCOGRAFIA</a>
