--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="header">
             <nav class="navbar">
-                <img class="logoBandaNav" src="../public/assets/imgs/ORaioRappa.png" style="width: 95px;">
+                <img class="logoBandaNav" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
                 <a href="./index.html">INICIAL</a>
                 <a href="./simulador.html">SOBRE</a>
                 <a href="./simulador.html">DISCOGRAFIA</a>
