Dashboard Semi Finalizada

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -21,11 +21,11 @@
     <div class="container">
         <div class="header">
             <nav class="navbar">
-                <img class="logoBandaNav" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
+                <img class="logoBandaNav" href="./index.html" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
                 <a href="./index.html">INICIAL</a>
-                <a href="./simulador.html">SOBRE</a>
-                <a href="./simulador.html">DISCOGRAFIA</a>
-                <a href="./simulador.html">QUIZ</a>
+                <a href="./index.html #chamaSobre">SOBRE</a>
+                <a href="./index.html #Discografia">DISCOGRAFIA</a>
+                <a href="./quiz.html">QUIZ</a>
                 <a href="./login.html">LOGIN</a>
                 <a href="./cadastro.html">CADASTRO</a>
             </nav>
