--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="header">
         <nav class="navbar">
-            <img class="logoBandaNav" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
+            <img class="logoBandaNav" href="./index.html" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
             <a href="./index.html">INICIAL</a>
             <a href="#chamaSobre">SOBRE</a>
             <a href="#Discografia">DISCOGRAFIA</a>
@@ -37,7 +37,7 @@
         <img class="logoBanda" src="./assets/imgs/ORaioRappa.png" alt="">
     </div>
 
-    <div class="conjunto2">
+    <div id="chamaSobre" class="conjunto2">
         <div class="sobreTexto">
             <p>O Rappa, banda carioca formada em 1993, é conhecida por sua fusão única de reggae, rock, rap e música
                 popular brasileira. Com letras que abordam questões sociais e políticas, a banda conquistou uma legião
@@ -50,7 +50,7 @@
         </div>
 
         <!-- Slideshow container -->
-        <div id="chamaSobre" class="sobreFoto">
+        <div  class="sobreFoto">
             <div class="sobreFoto-container">
                 <!-- Full-width images with number and caption text -->
                 <div class="Integrantes fade">
