--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,10 +14,8 @@
 <body onload="buscarSexo(), listar()">
     <main>
         <nav class="main-menu">
-            <h1>Fitness App</h1>
             <img class="logo"
-                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/4cfdcb5a-0137-4457-8be1-6e7bd1f29ebb"
-                alt="" />
+                src="./assets/imgs/ORaioRappa.png"/>
             <ul>
                 <li class="nav-item active">
                     <b></b>
@@ -69,22 +67,18 @@
             <div class="left-content">
                 <div class="left-bottom">
                     <div class="personal-bests">
-                        <h1>Personal Bests</h1>
                         <div class="personal-bests-container">
                             <div class="best-item box-one">
-                                <p>Longest Distance Cycling: 4 miles</p>
-                                <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/a3b3cb3a-5127-498b-91cc-a1d39499164a"
-                                    alt="" />
+                                <p>Longest Distance Cycling: </p>
+                                <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/a3b3cb3a-5127-498b-91cc-a1d39499164a"/>
                             </div>
                             <div class="best-item box-two">
-                                <p>Longest Roller-Skating: 2 hours</p>
-                                <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e0ee8ffb-faa8-462a-b44d-0a18c1d9604c"
-                                    alt="" />
+                                <p>Longest Roller-Skating: </p>
+                                <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e0ee8ffb-faa8-462a-b44d-0a18c1d9604c"/>
                             </div>
                             <div class="best-item box-three">
-                                <p>Longest Roller-Skating: 2 hours</p>
-                                <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e0ee8ffb-faa8-462a-b44d-0a18c1d9604c"
-                                    alt="" />
+                                <p>Longest Roller-Skating: </p>
+                                <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e0ee8ffb-faa8-462a-b44d-0a18c1d9604c"/>
                             </div>
                         </div>
                     </div>
