--- a/public/sobre.html
+++ b/public/sobre.html
@@ -16,14 +16,13 @@
 </head>
 
 <body>
-
     <!--header inicio-->
     <div class="header">
         <nav class="navbar">
             <img class="logoBandaNav" src="./assets/imgs/ORaioRappa.png" style="width: 95px;">
             <a href="./index.html">INICIAL</a>
-            <a href="#chamaSobre">SOBRE</a>
-            <a href="#Discografia">DISCOGRAFIA</a>
+            <a href="./index.html #chamaSobre">SOBRE</a>
+            <a href="./index.html  #Discografia">DISCOGRAFIA</a>
             <a href="./quiz.html">QUIZ</a>
             <a href="./login.html">LOGIN</a>
             <a href="./cadastro.html">CADASTRO</a>
